tests/snapshots/run_wpt_conformance__trtx_sigmoid_float16_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sigmoid.https.any.js",
    "sigmoid float16 1D constant tensor",
    "trtx",
    "PASS",
)
