tests/snapshots/run_wpt_conformance__trtx_sigmoid_float16_5D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sigmoid.https.any.js",
    "sigmoid float16 5D tensor",
    "trtx",
    "PASS",
)
